# swaprum_claimer

./: .gitignore  README.md  create_100_accounts.bat  create_thousand_accounts.bat  pyproject.toml  start.bat  start.py  swaprum.py
swaprum_claimer/: _web3.py  account_creator.py  api.py  arbitrum.py  cli.py  config.py  logger.py  main.py  paths.py  swaprum_api.py  swaprum_creator.py  worker.py
