[tool.poetry]
name = "swaprum-claimer"
version = "1.0"
description = "Claims swaprum.finance/free-tokens airdrop."
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"
packages = [{include = "swaprum_claimer"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
web3 = "^6.3.0"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
