[tool.poetry]
name = "swaprum-claimer"
version = "1.0"
description = "Claims swaprum.finance/free-tokens airdrop."
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"
packages = [{include = "swaprum_claimer"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
web3 = "^6.4.0"
loguru = "^0.7.0"
aiohttp = "^3.8.4"
tqdm = "^4.65.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
